--- a/frontend/src/app/features/onboarding/pages/complete-onboarding/complete-onboarding.component.html
+++ b/frontend/src/app/features/onboarding/pages/complete-onboarding/complete-onboarding.component.html
@@ -1,13 +1,10 @@
-<div class="text-sm mb-3 bg-red-100 text-red-700 border-red-200 rounded-md p-2">
-    ‼️‼️‼️‼️ OJO: La idea es que el registro lleve al onboarding completo creando niños, familia, etc. Este es solo el último paso para desbloequear la navegación!!
-</div>
-
 <div class="flex flex-col gap-3">
-    <h1 class="text-2xl font-semibold">¡Configuración completada!</h1>
-<p>¡Ahora puedes disfrutar de Nido!</p>
+    <h1 class="text-2xl font-semibold">¡Gracias por completar tu configuración inicial!</h1>
+<p>Ahora que ya tienes tu cuenta lista, puedes disfrutar de Nido y empezar a gestionar tus actividades y objetivos.</p>
 
-<p-button label="Continuar" (click)="onContinue()" styleClass="w-full" [loading]="isLoading" />
-
+<div class="flex flex-row justify-end">
+    <p-button label="Ir a mi cuenta" (click)="onContinue()" icon="pi pi-arrow-right" iconPos="right"  [loading]="isLoading" />
+</div>
 </div>
 
 <p-toast />
