--- a/frontend/src/app/features/onboarding/pages/init-onboarding-page/init-onboarding-page.component.html
+++ b/frontend/src/app/features/onboarding/pages/init-onboarding-page/init-onboarding-page.component.html
@@ -5,13 +5,16 @@
 <div class="flex flex-col gap-3">
     <h1 class="text-xl font-semibold">👋 Hola {{currentUser$()?.nick}}, parece que es tu primera vez en Nido</h1>
 <p>Antes de continuar, vamos a personalizar tu experiencia</p>
-<p-button label="Continuar" (click)="onContinue()" styleClass="w-full" icon="pi pi-arrow-right" iconPos="right" />
+<div class="flex flex-row justify-end my-5">
+    <p-button label="Empecemos" (click)="onContinue()" styleClass="w-full" icon="pi pi-arrow-right" iconPos="right" />
+</div>
+
 <div class="mt-3 flex flex-row gap-2 items-center justify-center">
     <div class="h-2 w-2 rounded-full bg-primary"></div>
-    <div class="h-2 w-2 rounded-full bg-[#3A665B]"></div>
-    <div class="h-2 w-2 rounded-full bg-[#3A665B]"></div>
-    <div class="h-2 w-2 rounded-full bg-[#3A665B]"></div>
-    <div class="h-2 w-2 rounded-full bg-[#3A665B]"></div>
+    <div class="h-2 w-2 rounded-full bg-neutral-200 dark:bg-neutral-900"></div>
+    <div class="h-2 w-2 rounded-full bg-neutral-200 dark:bg-neutral-900"></div>
+    <div class="h-2 w-2 rounded-full bg-neutral-200 dark:bg-neutral-900"></div>
+    <div class="h-2 w-2 rounded-full bg-neutral-200 dark:bg-neutral-900"></div>
 </div>
 
 
