--- a/frontend/src/app/components/activity/activity-form.component.html
+++ b/frontend/src/app/components/activity/activity-form.component.html
@@ -29,6 +29,7 @@
         formControlName="titulo"
         class="p-3 rounded-md"
       />
+      @if(tipo === 'evento') {
       <div>
         <textarea
           placeholder="Descripción"
@@ -37,7 +38,7 @@
           class="p-3 rounded-md w-full h-19"
         ></textarea>
       </div>
-
+      }
 
       <p-select
         [options]="filtroOpciones"
@@ -46,17 +47,17 @@
         optionLabel="label"
         placeholder="Selecciona Niño"
       ></p-select>
-      <div class="flex ">
-        <span class="flex items-center justify-center"
-          >Fecha de realización:</span
-        >
-        <p-datepicker
-          formControlName="fecha_realizacion"
-          class="border-0 rounded-md"
-          [iconDisplay]="'input'"
-          [appendTo]="'body'"
-          [showIcon]="true"
-        ></p-datepicker>
+      <div class="flex items-center gap-4">
+        <span class="min-w-max text-gray-700">Fecha de realización:</span>
+        <div class="flex-1 flex justify-end">
+          <p-datepicker
+            formControlName="fecha_realizacion"
+            class="border-0 rounded-md w-full max-w-[220px]"
+            [iconDisplay]="'input'"
+            [appendTo]="'body'"
+            [showIcon]="true"
+          ></p-datepicker>
+        </div>
       </div>
       <div class="flex justify-between align-middle">
         <span class="flex items-center justify-center">Hora de inicio:</span>
@@ -78,6 +79,7 @@
         />
       </div>
       }
+      @if(tipo === 'evento') {
       <p-select
         [options]="usuariosResponsables"
         formControlName="usuario_responsable"
@@ -85,6 +87,7 @@
         [optionValue]="'value'"
         placeholder="Responsable"
       ></p-select>
+      }
       @if(tipo === 'evento') {
         <div>
         <span>Seleccione color del evento:</span>
