fecha objetivo bien

--- a/frontend/src/app/features/dashboard/components/objectives-form/objectives-form.component.html
+++ b/frontend/src/app/features/dashboard/components/objectives-form/objectives-form.component.html
@@ -37,7 +37,7 @@
         <span class="min-w-max text-gray-700">Fecha de fin:</span>
         <div class="flex-1 flex justify-end">
           <p-datepicker
-            formControlName="fecha_realizacion"
+            formControlName="fecha_fin"
             class="border-0 rounded-md w-full max-w-[220px]"
             [iconDisplay]="'input'"
             [appendTo]="'body'"
