--- a/frontend/src/app/components/activity/activity-form.component.html
+++ b/frontend/src/app/components/activity/activity-form.component.html
@@ -6,9 +6,11 @@
   >
     <!-- Título fijo -->
     <h2 class="text-xl font-semibold text-gray-800 dark:text-white mb-4 shrink-0">
-
       @if(editMode) {
-        Editar {{tipo}} {{actividadInfo?.titulo || ''}}
+        @if(tipo === 'objetivo') {
+          Editar actividad {{actividadInfo?.titulo || ''}}
+        } @else {
+        Editar {{tipo}} {{actividadInfo?.titulo || ''}}}
       } 
       @else {
         Crear {{tipo}}
