Ajuste en fechas UTC

--- a/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
+++ b/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
@@ -23,7 +23,7 @@
   </div>
   }
 
-  <!-- Actividades tipo Evento -->
+  <!-- El día del niño -->
   @if (!loading()) {
   <div class="relative flex items-center md:justify-center">
     <!-- Flecha izquierda -->
@@ -55,7 +55,6 @@
           <li
             class="flex items-center px-3 py-2 rounded-lg shadow-sm transition-all duration-300 group bg-white dark:bg-gray-700"
           >
-            <!-- Puedes mostrar un icono si quieres, aquí solo color -->
             <span
               class="w-12 h-12 mr-3 rounded-full flex items-center justify-center bg-white border-4 dark:bg-gray-400"
               [style.border-color]="activity.color || '#cccccc'"
@@ -63,14 +62,12 @@
               <span class="text-2xl">📌</span>
             </span>
 
-            <!-- Nombre de la actividad -->
             <span class="flex-1 text-gray-900 dark:text-white">
               {{ activity.titulo }}
             </span>
 
-            <!-- Hora de inicio -->
             <span class="font-mono text-sm text-gray-700 w-24 text-right ml-3">
-              {{ activity.hora_inicio | date : "HH:mm" }}
+              {{ activity.hora_inicio | date : "HH:mm" : "UTC" }}
             </span>
           </li>
           }
