--- a/frontend/src/app/components/activity/activity-form.component.html
+++ b/frontend/src/app/components/activity/activity-form.component.html
@@ -13,7 +13,10 @@
         Editar {{tipo}} {{actividadInfo?.titulo || ''}}}
       } 
       @else {
-        Crear {{tipo}}
+        @if(tipo === 'objetivo') {
+          Crear actividad {{actividadInfo?.titulo || ''}}
+        } @else {
+        Crear {{tipo}}}
       }
 
     </h2>
@@ -122,7 +125,10 @@
         Editar {{tipo}} 
         } 
         @else {
-          Crear {{tipo}}
+          @if(tipo === 'objetivo') {
+            Crear actividad 
+          } @else {
+            Crear {{tipo}}}
         }
 
         </button>
