--- a/frontend/src/app/features/dashboard/pages/objectives-page/objectives-page.component.html
+++ b/frontend/src/app/features/dashboard/pages/objectives-page/objectives-page.component.html
@@ -221,7 +221,8 @@
   <app-objectives-form
     [objectiveInfo]="objectiveToEdit"
     [children]="childrenOptions"
-    (cerrar)="closeForm()"
+    [selectedChildId]="selectedChildId"
+    (cerrar)="onCerrarFormulario($event)"
     (guardar)="onGuardarObjetivo($event)"
     (editar)="onEditarObjetivo($event)"
   />
