arreglo settings familia + arreglo calendario form open in calendar page

--- a/frontend/src/app/components/message-modal/message-modal.component.html
+++ b/frontend/src/app/components/message-modal/message-modal.component.html
@@ -5,8 +5,10 @@
       <p-button class="  rounded-lg dark:border-1 dark:border-gray-300" (click)="cerrarModal()">
         Cancelar
       </p-button>
+      @if(showButton) {
       <p-button class=" rounded-lg dark:border-1 dark:border-gray-300" (click)="submitButton()">
         {{ buttonText }}
       </p-button>
+      }
   </div>
 </div>
