--- a/frontend/src/app/features/dashboard/pages/routines/calendar-page/calendar-page.component.html
+++ b/frontend/src/app/features/dashboard/pages/routines/calendar-page/calendar-page.component.html
@@ -109,7 +109,7 @@
       [actividadInfo]="actividadInfo"
       [children]="children"
       [usersFamily]="usersFamily"
-      [tipo]="'evento'"
+      [tipo]="actividadTipo"
       (editar)="editarActividad($event)"
       (cerrar)="cerrarActivityModal()"
       (guardar)="guardarNuevaActividad($event)"
